<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.ui.profile.ProfileFragment">

    <ScrollView
        android:id="@+id/frameScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameScrollViewFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/example_profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pipeKeyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:text="@string/your_pipe_key"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="64dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePublicKey"
                tools:text="@{setupViewModel.firstName}" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="64dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

            <EditText
                android:id="@+id/profilePublicKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:gravity="start|top"
                android:hint="@string/public_key"
                android:inputType="textMultiLine"
                android:lines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pipeKeyTextView" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="64dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/chooseProfilePictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/add_profile_picture"
                android:focusable="true"
                android:src="@drawable/gallery_icon"
                app:backgroundTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.653"
                app:layout_constraintStart_toStartOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="@+id/profile_picture"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/copyPublicKeyFloatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:backgroundTint="@android:color/white"
                android:clickable="true"
                android:contentDescription="@string/copy_pipe_key"
                android:focusable="true"
                android:scaleType="center"
                android:src="@drawable/ic_copy"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="@+id/profilePublicKey"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/profilePublicKey"
                app:layout_constraintTop_toTopOf="@+id/profilePublicKey"
                app:maxImageSize="18dp" />

            <TextView
                android:id="@+id/user_feeds_text"
                style="@android:style/TextAppearance.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:text="@string/user_feeds"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userFeedsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_feeds_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>